--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,31 @@
 /*  your css code here. If applicable */
+.book-library{
+background-color:whitesmoke;
+display:block;
+margin-left:auto;
+margin-right:auto;
+width:350px;
+length:50px;
+}
+.book{
+width:100px;
+length:50px;
+display:block;
+margin-left:auto;
+margin-right:auto;
+	
+}
+h5{
+	text-align:left;
+}
+meta{
+	text-align:left;
+}
+.butt{
+	background-color:#2ecc71;
+	width:200px;
+	border-radius:5px;
+	border:none;
+	color:white;
+	}
+
